--- a/Broccolini/Broccolini.csproj
+++ b/Broccolini/Broccolini.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
-        <LangVersion>10.0</LangVersion>
+        <LangVersion>preview</LangVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <FunckyImplicitUsings>enable</FunckyImplicitUsings>
