--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,17 @@ jobs:
     - name: Run Tests
       run: dotnet test --configuration Release --no-build
 
+  nupkg:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-dotnet@v1
+      name: Install Current .NET SDK
+    - name: Generate NuGet Packages
+      run: dotnet pack --configuration Release --output nupkg
+    - uses: actions/upload-artifact@v2
+      if: success() && github.ref == 'refs/heads/main'
+      with:
+        name: nupkg
+        path: nupkg/*
+        retention-days: 1
