--- a/Broccolini/Broccolini.csproj
+++ b/Broccolini/Broccolini.csproj
@@ -37,6 +37,8 @@
         <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
         <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="all" />
         <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
+    </ItemGroup>
+    <ItemGroup>
         <PackageReference Include="IsExternalInit" Version="1.0.2" PrivateAssets="all" />
     </ItemGroup>
     <ItemGroup>
