--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,5 +2,13 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild><!-- This is needed to enable IDE* rules during build. -->
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<WarningsAsErrors>nullable</WarningsAsErrors>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);CS1591</NoWarn><!-- CS1591: Missing XML comment for publicly visible type or member 'Type_or_Member' -->
 	</PropertyGroup>
+	<ItemGroup>
+        <Using Include="System.Collections.Immutable" />
+    </ItemGroup>
 </Project>
