--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,4 +12,7 @@
 	<ItemGroup>
         <Using Include="System.Collections.Immutable" />
     </ItemGroup>
+	<PropertyGroup>
+		<UseArtifactsOutput>true</UseArtifactsOutput>
+	</PropertyGroup>
 </Project>
